refactor: optimize codebase and refine integrations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <meta property="og:description"
     content="Portfolio of Deva Nandan S. - Student Roboticist • Embedded Systems Developer • IoT Innovator" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image" content="/dev.jpg" />
+
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Deva Nandan S. | Portfolio" />
